--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Dist::Zilla version 4.300038, CPAN::Meta::Converter version 2.132510'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -30,7 +30,7 @@ no_index:
 provides:
   Crypt::MCrypt:
     file: lib/Crypt/MCrypt.pm
-    version: 0.05
+    version: 0.06
 requires:
   Carp: 0
   Mo: 0
@@ -42,6 +42,7 @@ resources:
   bugtracker: https://github.com/shantanubhadoria/crypt-mcrypt/issues
   homepage: https://metacpan.org/release/Crypt-MCrypt
   repository: git://github.com/shantanubhadoria/crypt-mcrypt.git
-version: 0.05
+version: 0.06
 x_contributors:
+  - 'Shantanu <shantanu@cpan.org>'
   - 'Shantanu Bhadoria <shantanu@cpan.org>'
